removed local paths

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -50,7 +50,7 @@
     "- wat_1m.csv\n",
     "- scenariolist.csv\n",
     "\n",
-    "These files are available here: xxxx. The file path strings below must be set to a local path to run the subsequent blocks of code in this notebook. "
+    "These files are available in the JohnRushKucharski/tuolumne_paper repository and are tracked through Git LFS. The file path strings below must be set to a local path to run the subsequent blocks of code in this notebook. "
    ]
   },
   {
@@ -59,9 +59,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wat_1dy: str = '/Users/johnkucharski/Documents/source/toulumne/tuolumne_paper/data/wat_1d.csv' # set string path to wat_1d.csv \n",
-    "wat_1mo: str = '/Users/johnkucharski/Documents/source/toulumne/tuolumne_paper/data/wat_1m.csv' # set string path to wat_1m.csv\n",
-    "scenario_list: str = '/Users/johnkucharski/Documents/source/toulumne/tuolumne_paper/data/scenariolist.csv' # set string path to scenario_list.csv"
+    "wat_1dy: str = '' # set string path to wat_1d.csv \n",
+    "wat_1mo: str = '' # set string path to wat_1m.csv\n",
+    "scenario_list: str = '' # set string path to scenario_list.csv"
    ]
   },
   {
