--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -61,10 +61,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wat_1dy: str =  # set string path to wat_1d.csv\n",
-    "wat_1mo: str =  # set string path to wat_1m.csv\n",
-    "scenario_list: str = # set string path to scenario_list.csv\n",
-    "figure_dir: str = # set string path to figure directory"
+    "wat_1dy: str # set string path to wat_1d.csv\n",
+    "wat_1mo: str # set string path to wat_1m.csv\n",
+    "scenario_list: str # set string path to scenario_list.csv\n",
+    "figure_dir: str # set string path to figure directory"
    ]
   },
   {
